--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,11 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
+      type="text/css"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
